fixed overlapping sections

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Quicksand:wght@300;400;700&family=Zilla+Slab&display=swap');
 
-/*body *{
+body *{
   border:2px solid red;
 } 
-*/
+
 
 :root{
   --main-blue:#18314F;
@@ -33,8 +33,8 @@ a{
 
 body {
   background:linear-gradient(135deg, var(--main-blue), var(--main-teal), var(--main-green));
-  animation: backgroundColour 10s infinite;
-  background-size:200%;
+  animation: backgroundColour 20s infinite;
+  background-size:400%;
   font-family: 'Quicksand', sans-serif;
   font-size:20px;
 }
@@ -61,6 +61,7 @@ body {
   height:2rem;
   width:100vw;
   padding:1rem;
+  z-index:1;
 }
 
 #navigations{
@@ -68,22 +69,30 @@ body {
   list-style:none;
   justify-content:flex-end;
   margin:0 5rem;
-  gap:1rem;
+  gap:2rem;
   flex:1;
 } 
 
 .nav-link{
   font-size:1.5rem;
   font-weight:bold;
+  padding:0.3rem;
+}
+
+.nav-link:hover{
+  background-color:white;
+  color:var(--main-teal);
+  border-radius:0.5rem;
 }
 
 main{
-  margin:0 5vw;
+  margin: 0 5vw;
+  position:relative;
 }
 
 #welcome-section{
   display:flex;
-  height:100vh;
+  min-height:100vh;
   flex-direction:column;
   justify-content:center;
   gap:1rem;
@@ -93,11 +102,16 @@ main{
   font-size:5rem;
 }
 
+@keyframes typing{
+  from {width: 0}
+  to {width: 100%}
+}
+
 #project-section{
   display:flex;
   flex-direction:column;
   justify-content:space-evenly;
-  height:50vh;
+  min-height:50vh;
 }
 
 #project-tiles{
@@ -119,7 +133,7 @@ main{
   display:flex;
   flex-direction:column;
   justify-content:space-evenly;
-  height:50vh;
+  min-height:50vh;
 }
 
 #links{
@@ -138,5 +152,6 @@ main{
 }
 
 footer{
+  position:relative;
   text-align:right;
 }
